# aimotive-project

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
docs/: MANUAL.md  README.md  config.h.example
include/: config.h  example.config.h  io.h  neuralnet.h
script/: build  dist  package
src/: io.cpp  neuralnet.cpp
test/: test_config.cpp  test_io.cpp  test_neuralnet.cpp
